# Emmitx86

./: .gitignore  CMakeLists.txt  aarch64.sh  config.mk  general.mk  linux.mk  linuxAarch64.mk  windows.mk
examples/: code.c  code1.c  code_arm.c  test.cd
include/: global.h  global_emmit.h
include/arm/: global_aarch64.h  global_arm.h
include/arm/aarch64/: aarch64.h
include/x86/: global_x86.h
include/x86/amd64/: amd64.h
src/: global.c  global_emmit.c
src/arm/aarch64/: aarch64.c
src/x86/amd64/: amd64.c
